[gd_scene load_steps=3 format=3 uid="uid://dke6s7f3yqj3v"]

[ext_resource type="Script" uid="uid://dcnqtmrnn8r3m" path="res://main.gd" id="1_f8c6w"]
[ext_resource type="AudioStream" uid="uid://b3qchxtag61n3" path="res://output.wav" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_f8c6w")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 470.0
offset_top = 250.0
offset_right = 810.0
offset_bottom = 310.0
placeholder_text = "Escribe aquí..."

[node name="Button" type="Button" parent="."]
offset_left = 590.0
offset_top = 350.0
offset_right = 690.0
offset_bottom = 400.0
text = "Hablar"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0xm2m")

[node name="ESpeakNode" type="ESpeakNode" parent="."]

[node name="SpanishToggle" type="CheckButton" parent="."]
offset_left = 588.0
offset_top = 417.0
offset_right = 697.0
offset_bottom = 448.0
text = "Español"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SpanishToggle" to="." method="_on_spanish_toggle_pressed"]
[connection signal="toggled" from="SpanishToggle" to="." method="_on_SpanishToggle_toggled"]
